[tool.poetry]
name = "hayapo_apex"
version = "0.1.0"
description = "A"
authors = ["hayapo <keep.forward1001@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
emoji = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
